--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,14 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
+  device_preview: ^1.0.0
+  dio: ^4.0.4
   equatable: ^2.0.3
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.1
+  get_it: ^7.2.0
+  pretty_dio_logger: ^1.1.1
 
 dev_dependencies:
   flutter_lints: ^1.0.0
