--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.0.1
   get_it: ^7.2.0
+  hive_flutter: ^1.1.0
   pretty_dio_logger: ^1.1.1
 
 dev_dependencies:
