--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.github_app">
+   <uses-permission android:name="android.permission.INTERNET" />
    <application
         android:label="github_app"
         android:name="${applicationName}"
