--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: github_app
+name: init_flutter
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -40,6 +40,7 @@ dependencies:
 
 dev_dependencies:
   flutter_lints: ^1.0.0
+  change_app_package_name: ^1.0.0
   flutter_test:
     sdk: flutter
 
