--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,11 @@ dependencies:
   get_it: ^7.2.0
   hive_flutter: ^1.1.0
   pretty_dio_logger: ^1.1.1
+  provider: ^6.0.2
 
 dev_dependencies:
-  flutter_lints: ^1.0.0
   change_app_package_name: ^1.0.0
+  flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
 
@@ -66,7 +67,6 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-
   # {
   # FontWeight.w100: 'Thin',
   # FontWeight.w200: 'ExtraLight',
@@ -99,7 +99,6 @@ flutter:
   #         weight: 800
   #       - asset: fonts/Poppins-Black.ttf
   #         weight: 900
-
   # fonts:
   #   - family: Schyler
   #     fonts:
