--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.15.1 <3.0.0"
+  sdk: ">=2.17.1 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -28,16 +28,11 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
-  device_preview: ^1.0.0
   dio: ^4.0.4
-  equatable: ^2.0.3
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.0.1
-  get_it: ^7.2.0
-  hive_flutter: ^1.1.0
+  flutter_riverpod: ^2.3.6
   pretty_dio_logger: ^1.1.1
-  provider: ^6.0.2
 
 dev_dependencies:
   change_app_package_name: ^1.0.0
